# FRAOS

./: .gitignore  NOTICE  README.md
max/: README.md
max/build-config/: README.md  edition.json  tenant.dev.json.example
max/control-client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
max/hub/: README.md
max/scripts/: extract-app-icon-source.py  stage-release-installers.mjs
max/shared/: load-tenant-config.mjs  max-sites.ts  output-mode.ts  station-release.json  tenant-config.ts
max/station/: README.md  package-lock.json  package.json  tailwind.config.js
max/website/: README.md  package-lock.json
pro/: README.md
pro/asc/: README.md
pro/build-config/: edition.json  tenant.dev.json.example
pro/control-client/: .env.example
pro/hub/: package-lock.json
pro/scripts/: generate-app-icons.mjs  stage-release-installers.mjs
pro/shared/: fraos-release.json  pro-team.ts  site-storage.ts  tenant-config.ts
pro/station/: tsconfig.json
pro/website/: .gitignore  EStop.json  README.md  next.config.ts  package.json
standard/: README.md
standard/build-config/: edition.json  tenant.dev.json
standard/control-client/: package.json  tailwind.config.js  tsconfig.json
standard/hub/: package.json
standard/shared/: fraos-release.json  site-storage.ts  tenant-config.ts
standard/station/: .gitignore  (+3 more)
standard/station/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
standard/station/src-tauri/capabilities/: default.json
standard/station/src-tauri/icons/: icon.icns
standard/station/src-tauri/src/: lib.rs
ultra/: README.md
(+576 files in other folders)
